Fixed alignment issue on mobile for main page

--- a/src/App.scss
+++ b/src/App.scss
@@ -68,7 +68,7 @@ footer {
   flex: auto;
   width: 90%;
   
-  h4 {
+  h3, h4 {
     text-align: center;
   }
 }
